[gd_scene load_steps=4 format=2]

[ext_resource path="res://events/computer/cache.png" type="Texture" id=1]
[ext_resource path="res://events/computer/computer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.25, 5.25 )

[node name="computer" type="Area2D"]
collision_layer = 16
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -2 )
shape = SubResource( 1 )

[node name="Cache" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
hframes = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 70.0

[node name="navPoint" type="Position2D" parent="."]
position = Vector2( -2, 3 )

[connection signal="body_entered" from="." to="." method="_on_computer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_computer_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
